--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid">
-  <h1>Credentials Form</h1>
+  <h1>Employee Form</h1>
   <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
 
-{{userForm.value|json}}
+
     <div class="form-group">
-      <label>UserName</label>
-      <input type="text" class="form-control" #username="ngModel"name ="userName" placeholder="e.g: himanshu" [(ngModel)]="userModel.username">
+      <label>EmployeeName</label>
+      <input type="text" class="form-control" #employeename="ngModel"name ="employeeName" placeholder="e.g: himanshu" [(ngModel)]="userModel.employeename">
     </div>
 
     <div class="form-group">
-      <label>Password</label>
-      <input type="password" class="form-control" #password="ngModel" name="password" placeholder=" e.g: abcd" [(ngModel)]="userModel.password">
+      <label>Email</label>
+      <input type="email" class="form-control" #password="ngModel" name="email" placeholder=" e.g: abcd@gmail.com" [(ngModel)]="userModel.email">
     </div>
     <button class="btn btn-primary" type="submit">Submit</button>
   </form>
