--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -5,7 +5,7 @@
 
     <div class="form-group">
       <label>EmployeeName</label>
-      <input type="text" class="form-control" #employeename="ngModel"name ="employeeName" placeholder="e.g: himanshu" [(ngModel)]="userModel.employeename">
+      <input type="text" class="form-control" #employeename="ngModel"name ="employeeName" placeholder="e.g: Himanshu Kumar" [(ngModel)]="userModel.employeename">
     </div>
 
     <div class="form-group">
