--- a/src/app/pages/tasks/tasks.component.html
+++ b/src/app/pages/tasks/tasks.component.html
@@ -1,3 +1,5 @@
-<p>
-  tasks works!
-</p>
+<div class="form-group">
+  <label for="comment"><h5>Add a New Task:</h5></label>
+  <textarea style="border: #00BCD4 1px solid" class="form-control" rows="5" id="comment"></textarea>
+</div>
+<button type="button" class="btn btn-primary btn-block">Submit</button>
