--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -1,17 +1,22 @@
-<div class="container-fluid">
-  <h1>Employee Form</h1>
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">Employee Form</h4>
+
   <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
 
 
     <div class="form-group">
-      <label>EmployeeName</label>
-      <input type="text" class="form-control" #employeename="ngModel"name ="employeeName" placeholder="e.g: Himanshu Kumar" [(ngModel)]="userModel.employeename">
+      <label>Employee Name</label>
+      <input type="text" class="form-control"#employeename="ngModel"name ="employeeName" placeholder="David Smith" [(ngModel)]="userModel.employeename">
+      <i class="form-group__bar"></i>
+    </div>
+    <div class="form-group">
+      <label>Employee Email</label>
+      <input type="email" class="form-control"#password="ngModel" name="email" placeholder=" e.g: abcd@gmail.com"[(ngModel)]="userModel.email">
+      <i class="form-group__bar"></i>
     </div>
 
-    <div class="form-group">
-      <label>Email</label>
-      <input type="email" class="form-control" #password="ngModel" name="email" placeholder=" e.g: abcd@gmail.com" [(ngModel)]="userModel.email">
-    </div>
     <button class="btn btn-primary" type="submit">Submit</button>
   </form>
+</div>
 </div>
