--- a/src/app/pages/viewcredentials/viewcredentials.component.html
+++ b/src/app/pages/viewcredentials/viewcredentials.component.html
@@ -1,48 +1,95 @@
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">Employee Table</h4>
+    <table datatable class="table table-bordered" [dtTrigger]="dtTrigger" [dtOptions]="options">
+      <thead>
+      <tr>
+        <th *ngFor="let column of columns">{{ column.title }}</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let row of users">
+        <td>{{ row.employeename }}</td>
+        <td>{{ row.email }}</td>
+        <td>  <button class="btn btn-primary btn-sm btn--icon-text" (click)="delete(row._id)">
+          <i class="zmdi zmdi-delete"></i> Delete
+        </button></td>
+        <td>
+          <button class="btn btn-primary btn-sm btn--icon-text" (click)="put(row._id)">
+            <i class="zmdi zmdi-edit"></i> Edit
+          </button>
+        </td>
 
-<h1> Employee Table</h1>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<table style="border: 1px solid black">
-  <tr style="border: 1px solid black">
-    <th>Employeename</th>
-    <th>Email</th>
-  </tr>
-  <tr *ngFor="let user of users">
-    <td>{{user.employeename}}</td>
-    <td>{{user.email}}</td>
-    <td>
-      <button (click)="delete(user._id)">delete</button>
-
-      <button (click)="put(user._id)">edit</button>
-      <!-- <button (click)="getElementById(user._id)">getElementById</button>-->
-    </td>
-  </tr>
-
-</table>
 
 <div class="modal fade" bsModal #modal="bs-modal" tabindex="-1" role="dialog" aria-labelledby="dialog-static-name">
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="container-fluid">
-          <h1>Credentials Form</h1>
-          <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
-
-            {{userForm.value|json}}
-            <div class="form-group">
-              <label>EmployeeName</label>
-              <input type="text" class="form-control" #employeename="ngModel"name ="employeeName" placeholder="e.g: himanshu" [(ngModel)]="userModel.employeename">
-            </div>
-
-            <div class="form-group">
-              <label>Password</label>
-              <input type="email" class="form-control" #email="ngModel" name="email" placeholder=" e.g: abcd" [(ngModel)]="userModel.email">
-            </div>
-            <button class="btn btn-primary" type="submit">Submit</button>
-          </form>
-        </div>
+        <h4 class="modal-title">Edit Details</h4>
       </div>
+      <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
+        <div class="modal-body">
+
+          <div class="content__inner">
+            <div class="form-group">
+              <label>Employee Name</label>
+
+                <input type="text" class="form-control"#employeename="ngModel"name ="employeeName" placeholder="David Smith" [(ngModel)]="userModel.employeename">
+
+              <i class="form-group__bar"></i>
+            </div>
+            <div class="form-group">
+              <label>Employee Email</label>
+                <input type="email" class="form-control"#password="ngModel" name="email" placeholder=" e.g: abcd@gmail.com"[(ngModel)]="userModel.email">
+              <i class="form-group__bar"></i>
+            </div>
+
+          </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-link"
+                    >Save changes</button>
+          </div>
+      </form>
     </div>
   </div>
 </div>
+
+
+
+
+<!--<div class="modal fade" bsModal #modal="bs-modal" tabindex="-1" role="dialog" aria-labelledby="dialog-static-name">-->
+<!--  <div class="modal-dialog modal-lg modal-dialog-centered">-->
+<!--    <div class="modal-content">-->
+<!--      <div class="modal-header">-->
+<!--        <h4 class="modal-title">Edit Details</h4>-->
+<!--        <div class="modal-body">-->
+
+<!--          <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>-->
+<!--            <div class="content__inner">-->
+<!--              <div class="row">-->
+<!--            <div class="form-group">-->
+<!--              <label>EmployeeName</label>-->
+<!--              <input type="text" class="form-control" #employeename="ngModel"name ="employeeName" placeholder="e.g: himanshu" [(ngModel)]="userModel.employeename">-->
+<!--            </div>-->
+
+<!--            <div class="form-group">-->
+<!--              <label>Password</label>-->
+<!--              <input type="email" class="form-control" #email="ngModel" name="email" placeholder=" e.g: abcd" [(ngModel)]="userModel.email">-->
+<!--            </div>-->
+<!--            <button class="btn btn-primary" type="submit">Submit</button>-->
+<!--              </div></div>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
 
