--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -1,2 +1,45 @@
-<div id="chartdiv" style="width: 100%; height: 500px"></div>
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title">Assigned Tasks</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <ng-select [items]="employee" bindLabel="name"  [clearable]=false
+                     placeholder="Select your name" (change)="onChangeName($event)">
+          </ng-select>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <table class="col-md-12">
+        <tr>
+          <td>
+            <textarea style="border: #00BCD4 1px solid" class="form-control" rows="2" ></textarea>
+          </td>
+          <td>
+            <button type="submit" class="btn btn-success">
+              Start
+            </button>
+          </td>
+        </tr>
+        <tr *ngFor="let row of tasks">
 
+          <td class="list-group-item list-group-item-primary">{{ row.task }}</td>
+          <td>
+            <button type="submit" class="btn btn-success">
+              Start
+            </button>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title">Progress Chart</h2>
+    <div id="chartdiv" style="width: 100%; height: 500px"></div>
+  </div>
+</div>
