--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -40,6 +40,8 @@
 <div class="card">
   <div class="card-body">
     <h2 class="card-title">Progress Chart</h2>
+    <h6 class="card-subtitle">Record of last 10 tasks</h6>
+
     <div id="chartdiv" style="width: 100%; height: 500px"></div>
   </div>
 </div>
