--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,3 +1,23 @@
-<p>
-  projects works!
-</p>
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title">Assigned Tasks</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>Enter Your Project</label>
+          <input type="text" class="form-control" name ="Enter Your Project" >
+          <i class="form-group__bar"></i>
+        </div>
+        <div class="form-group">
+
+          <label>Select Employees</label>
+          <ng-select [items]="users" bindLabel="employeename"  [clearable]=false
+                     placeholder="Select Employee" (change)="onChangeName($event)">
+            <i class="form-group__bar"></i>
+          </ng-select>
+        </div>
+        <button class="btn btn-primary" type="submit">Submit form</button>
+</div>
+</div>
+  </div>
+  </div>
