--- a/src/app/pages/projectreview/projectreview.component.html
+++ b/src/app/pages/projectreview/projectreview.component.html
@@ -1,3 +1,46 @@
-<p>
-  projectreview works!
-</p>
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title">Select Project</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <ng-select [items]="employee" bindLabel="name"  [clearable]=false
+                     placeholder="Project name" (change)="onChangeName($event)">
+          </ng-select>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <table class="col-md-12">
+        <tr>
+          <td>
+            <textarea style="border: #00BCD4 1px solid" class="form-control" rows="2" ></textarea>
+          </td>
+
+        </tr>
+        <tr>   <td>
+          <button type="submit" class="btn btn-success">
+            Complete
+          </button>
+          <button type="submit" class="btn btn-success">
+            WIP
+          </button>
+          <button type="submit" class="btn btn-success">
+            Delete
+          </button>
+        </td>
+        </tr>
+        <tr *ngFor="let row of tasks">
+
+          <td class="list-group-item list-group-item-primary">{{ row.task }}</td>
+          <td>
+            <button type="submit" class="btn btn-success">
+              Start
+            </button>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+  </div>
+</div>
