post data in front end

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>Enter Your Project</label>
-          <input type="text" class="form-control" name ="Enter Your Project" >
+          <input type="text" class="form-control" name ="Enter Your Project" #name="ngModel"name ="employee"[(ngModel)]="userModel.employee">
           <i class="form-group__bar"></i>
         </div>
         <div class="form-group">
