--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -22,6 +22,14 @@
             </button>
           </td>
         </tr>
+        <tr>
+          <td class="list-group-item list-group-item-dark">Diagram of pm</td>
+          <td>
+            <button disabled type="submit" class="btn btn-danger">
+              Ongoing
+            </button>
+          </td>
+        </tr>
         <tr *ngFor="let row of tasks">
 
           <td class="list-group-item list-group-item-primary">{{ row.task }}</td>
