--- a/src/app/pages/tasks/tasks.component.html
+++ b/src/app/pages/tasks/tasks.component.html
@@ -1,81 +1,85 @@
 <div class="card">
-  <div class="card-body">
+  <div class="container">
     <h4 class="card-title">Write Task</h4>
 
-  <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
+    <form #userForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
 
 
-    <div class="form-group">
-      <label for="comment"><h5>Add a New Task:</h5></label>
-      <textarea style="border: #00BCD4 1px solid" class="form-control" rows="5" id="comment" #task="ngModel" name="task" [(ngModel)]="userModel.task"></textarea>
-      
-    </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
-  </form>
+      <div class="form-group">
+        <label for="comment">
+          <h5>Add a New Task:</h5>
+        </label>
+        <textarea style="border: #00BCD4 1px solid" class="form-control" rows="5" id="comment" #task="ngModel"
+          name="task" [(ngModel)]="userModel.task"></textarea>
+
+      </div>
+      <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+  </div>
 </div>
 
 
-<!-- Default -->
-  
-
-
-
-
-<h1> TASK ASSIGN</h1>
-<!--
-<table style="border: 1px solid black">
-  <tr style="border: 1px solid black">
-    
-    <th>Task</th>
-  </tr>
-  <tr *ngFor="let user of users">
-    <td>{{user.task}}</td>
-   
-    <td>
-      <button (click)="delete(user._id)">delete</button>
-
-      <button (click)="assignTo(user._id)">edit</button>
-      < <button (click)="getElementById(user._id)">getElementById</button>>
-    </td>
-  </tr>
-
-</table>-->
-
-</div>
 <div class="card">
   <div class="card-body">
     <h4 class="card-title">Task Table</h4>
     <table datatable class="table table-bordered" [dtTrigger]="dtTrigger" [dtOptions]="options">
       <thead>
         <tr>
-          <th *ngFor="let column of columns">{{ column.title }}</th>
+          <th *ngFor="let column of columns">{{ column.title }} &nbsp;&nbsp;</th>
         </tr>
-        </thead>
+      </thead>
       <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.task}}
+        <tr *ngFor="let user of tasks">
+          <td>{{ user.task}}
 
-        </td>
-        <td>  <button class="btn btn-primary btn-sm btn--icon-text" (click)="getI(user._id)">
-          <i class="zmdi zmdi-edit"></i> Assign 
-        </button></td>
-        
-        <td>  <button class="btn btn-primary btn-sm btn--icon-text" (click)="delete(user._id)">
-          <i class="zmdi zmdi-delete"></i> Delete
-        </button></td>
-        
+          </td>
+          <td> <button class="btn btn-primary btn-sm btn--icon-text" (click)="getI(user._id)">
+              <i class="zmdi zmdi-edit"></i> Assign
+            </button></td>
 
-      </tr>
+          <td> <button class="btn btn-primary btn-sm btn--icon-text" (click)="delete(user._id)">
+              <i class="zmdi zmdi-delete"></i> Delete
+            </button></td>
+
+
+        </tr>
       </tbody>
     </table>
   </div>
 </div>
+
 <div class="modal fade" bsModal #modal="bs-modal" tabindex="-1" role="dialog" aria-labelledby="dialog-static-name">
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Data Annotation</h4>
       </div>
-    </div>
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Employee List</h4>
+          
+          <table class="table table-dark">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Employee</th>
+                
+              </tr>
+            </thead>
+            <tbody>
+              
+                
+                <tr *ngFor="let user of users">
+                  <th scope="row">==========></th>
+                  <td (click)="work(user._id)">{{user.employeename}}</td>
+                  <!-- <td> <button class="btn btn-primary btn-sm btn--icon-text" (click)="work(user._id)">
+                    <i class="zmdi zmdi-edit"></i> takeWork
+                  </button></td> -->
+              </tr>
+            </tbody>
+          </table>
+       
+      </div>
+      </div>
+          </div>
   </div>
 </div>
