--- a/src/app/pages/projectreview/projectreview.component.html
+++ b/src/app/pages/projectreview/projectreview.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>Select Project</label>
-          <ng-select [items]="projects" bindLabel="name"  [clearable]=false
+          <ng-select [items]="projects" bindLabel="projectname"  [clearable]=false
                     (change)="onChangeName($event)">
           </ng-select>
         </div>
