--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,30 +1,16 @@
 <div class="card">
   <div class="card-body">
-    <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
     <h2 class="card-title">Assigned Tasks</h2>
-<<<<<<< Updated upstream
     <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
-=======
-
-
->>>>>>> Stashed changes
     <div class="row">
-      <form class="coli-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label>Enter Your Project</label>
-<<<<<<< Updated upstream
           <input type="text" class="form-control" placeholder="Enter Your Project" #project="ngModel" name="project"[(ngModel)]="userModel.project">
           <i class="form-group__bar"></i>
         </div>
       </div>
     </div>
-=======
-            <input type="text" class="form-control"  placeholder = "Enter Project Name"#name="ngModel"name ="employee"[(ngModel)]="userModel.employee">
-            <i class="form-group__bar"></i>
-          </div>
-
-
->>>>>>> Stashed changes
         <div class="form-group">
           <label>Select Employees</label>
           <ng-select [items]="users" bindLabel="employeename"  [clearable]=false
@@ -33,7 +19,6 @@
           </ng-select>
         </div>
         <button class="btn btn-primary" type="submit">Submit form</button>
-<<<<<<< Updated upstream
     </form>
       </div>
 </div>
@@ -61,13 +46,4 @@
 </table>
   </div>
 </div>
-=======
-      </form>
-    </div>
-
-</div>
-</div>
-
-
->>>>>>> Stashed changes
 
