--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -4,8 +4,8 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <ng-select [items]="employee" bindLabel="name"  [clearable]=false
-                     placeholder="Select your name" (change)="onChangeName($event)">
+          <ng-select [items]="employee" bindLabel="employeename"  [clearable]=false (change)="tasklist($event)"
+                     placeholder="Select your name" >
           </ng-select>
         </div>
       </div>
@@ -32,7 +32,7 @@
         </tr>
         <tr *ngFor="let row of tasks">
 
-          <td class="list-group-item list-group-item-primary">{{ row.task }}</td>
+          <td class="list-group-item list-group-item-primary"bindLabel="task">{{ row.task.task }}</td>
           <td>
             <button type="submit" class="btn btn-success">
               Start
