--- a/src/app/pages/tasks/tasks.component.html
+++ b/src/app/pages/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="container">
+  <div class="card-body">
     <h4 class="card-title">Write Task</h4>
 
     <form #userForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
@@ -33,12 +33,12 @@
           <td>{{ user.task}}
 
           </td>
-           
+
             <td > <button class="btn btn-primary btn-sm btn--icon-text" [disabled]="user.assign" (click)="getI(user._id)">
                 <i class="zmdi zmdi-edit"></i> Assign
               </button></td>
-          
-          
+
+
           <td> <button class="btn btn-primary btn-sm btn--icon-text" (click)="delete(user._id)">
               <i class="zmdi zmdi-delete"></i> Delete
             </button></td>
