--- a/src/app/pages/projectreview/projectreview.component.html
+++ b/src/app/pages/projectreview/projectreview.component.html
@@ -1,12 +1,17 @@
 <div class="card">
   <div class="card-body">
     <h2 class="card-title">Project Review</h2>
+
+    <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
+
           <label>Select Project</label>
           <ng-select [items]="projects" bindLabel="projectname"  [clearable]=false
-                    (change)="onChangeName($event)">
+                     #project="ngModel" name="project"[(ngModel)]="userModel.project"
+                    
+          (change)="onChangeName($event)">
           </ng-select>
         </div>
       </div>
@@ -18,26 +23,31 @@
 
             <div class="form-group" >
               <label>Enter Ongoing/Completed tasks</label>
-              <input type="text" class="form-control"name ="employeeName" >
+              <input type="text" class="form-control"#tasks="ngModel"name ="tasks" [(ngModel)]="userModel.tasks">
+              <i class="form-group__bar"></i>
+            </div>
+
+
+
+            <div class="form-group" >
+              <label>Status</label>
+              <input type="text" class="form-control"#status="ngModel"name ="status" [(ngModel)]="userModel.status">
               <i class="form-group__bar"></i>
             </div>
           </td>
-          <td style="width: 50px">
-            <button type="submit" class="btn btn-success">
-              Completed
-            </button>
-          </td>
-          <td style="width: 50px">
-            <button type="submit" class="btn btn-success">
-              WIP
-            </button>
-          </td>
+
+
         </tr>
         <tr>
         </tr>
       </table>
     </div>
-
+    </form>
+    <td style="width: 50px">
+      <button type="submit" class="btn btn-success">
+        Submit
+      </button>
+    </td>
   </div>
 </div>
 
@@ -74,3 +84,52 @@
     </tr>
   </div>
 </div>
+
+
+
+
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">Project Review Table</h4>
+    <table datatable class="table table-bordered" [dtTrigger]="dtTrigger" [dtOptions]="options">
+      <thead>
+      <tr>
+        <th *ngFor="let column of columns">{{ column.title }}</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let row of users">
+        <td>{{ row.task }}</td>
+        <td>  <button class="btn btn-primary btn-sm btn--icon-text" (click)="delete(row._id)">
+          <i class="zmdi zmdi-delete"></i> Delete
+        </button></td>
+        <td>
+          <button class="btn btn-primary btn-sm btn--icon-text" (click)="put(row._id)">
+            <i class="zmdi zmdi-edit"></i> Edit
+          </button>
+        </td>
+
+        <td>
+          <button class="btn btn-primary btn-sm btn--icon-text" (click)="put(row._id)">
+            <i class="zmdi zmdi-status"></i> Status
+          </button>
+        </td>
+
+
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
