--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -32,11 +32,13 @@
         </tr>
         <tr *ngFor="let row of tasks">
 
-          <td class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
+          <td *ngIf="!(row.task==null)"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
+          
           <td *ngIf="row.task.status"><button type="submit" class="btn btn-danger">
               Ongoing
             </button></td>
-          <td *ngIf="!row.task.status">
+          
+            <td *ngIf="!row.task.status">
             <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
               Start
             </button>
