--- a/src/app/pages/viewcredentials/viewcredentials.component.html
+++ b/src/app/pages/viewcredentials/viewcredentials.component.html
@@ -28,7 +28,7 @@
 
 <div class="modal fade" bsModal #modal="bs-modal" tabindex="-1" role="dialog" aria-labelledby="dialog-static-name">
   <div class="modal-dialog modal-lg modal-dialog-centered">
-    <div class="modal-content">
+    <ddiv class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">Edit Details</h4>
       </div>
@@ -50,7 +50,7 @@
                     >Save changes</button>
           </div>
       </form>
-    </div>
+    </ddiv>
   </div>
 </div>
 
