--- a/src/app/pages/projectreview/projectreview.component.html
+++ b/src/app/pages/projectreview/projectreview.component.html
@@ -114,7 +114,7 @@
         <h4 class="modal-title">Edit Details</h4>
       </div>
       <form #userForm="ngForm"  (ngSubmit)="onEdit()" novalidate>
-        {{userForm.value|json}}
+<!--        {{userForm.value|json}}-->
         <div class="modal-body">
           <div class="content__inner">
             <div class="form-group">
