--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -14,10 +14,10 @@
       <table class="col-md-12">
         <tr>
           <div class="form-group">
-<!--          <td>-->
-<!--          -->
-<!--            <textarea style="border: #00BCD4 1px solid" class="form-control" rows="2"#name="ngModel"name ="task"[(ngModel)]="userModel.task"></textarea>-->
-<!--          </td>-->
+          <td>
+
+            <textarea style="border: #00BCD4 1px solid" class="form-control" rows="2"#name="ngModel"name ="task"[(ngModel)]="userModel.task"></textarea>
+          </td>
           <td>
             <button type="submit" class="btn btn-success"(click)=oWntask()>
               Start
