--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -4,8 +4,8 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <ng-select [items]="employee" bindLabel="employeename" [clearable]=false (change)="tasklist($event)"
-            placeholder="Select your name">
+          <ng-select [items]="employee" bindLabel="name"  [clearable]=false
+                     placeholder="Select your name" (change)="onChangeName($event)">
           </ng-select>
         </div>
       </div>
@@ -13,33 +13,31 @@
     <div class="row">
       <table class="col-md-12">
         <tr>
-          <div class="form-group">
           <td>
-
-            <textarea style="border: #00BCD4 1px solid" class="form-control" rows="2"#name="ngModel"name ="task"[(ngModel)]="userModel.task"></textarea>
+            <textarea style="border: #00BCD4 1px solid" class="form-control" rows="2" ></textarea>
           </td>
           <td>
-            <button type="submit" class="btn btn-success"(click)=oWntask()>
+            <button type="submit" class="btn btn-success">
               Start
             </button>
           </td>
-        </div>
         </tr>
-
+        <tr>
+          <td class="list-group-item list-group-item-dark">Diagram of pm</td>
+          <td>
+            <button disabled type="submit" class="btn btn-danger">
+              Ongoing
+            </button>
+          </td>
+        </tr>
         <tr *ngFor="let row of tasks">
 
-          <td *ngIf="!(row.task==null)"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
-
-          <td *ngIf="row.task.status"><button type="submit" class="btn btn-danger">
-              Ongoing
-            </button></td>
-
-            <td *ngIf="!row.task.status">
-            <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
+          <td class="list-group-item list-group-item-primary">{{ row.task }}</td>
+          <td>
+            <button type="submit" class="btn btn-success">
               Start
             </button>
           </td>
-
         </tr>
       </table>
     </div>
