--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -4,41 +4,40 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <ng-select [items]="employee" bindLabel="name"  [clearable]=false
-                     placeholder="Select your name" (change)="onChangeName($event)">
+          <ng-select [items]="employee" bindLabel="employeename" [clearable]=false (change)="tasklist($event)"
+                     placeholder="Select your name">
           </ng-select>
         </div>
       </div>
     </div>
     <div class="row">
-      <table class="col-md-12">
-        <tr>
-          <td>
-            <textarea style="border: #00BCD4 1px solid" class="form-control" rows="2" ></textarea>
-          </td>
-          <td>
-            <button type="submit" class="btn btn-success">
-              Start
-            </button>
-          </td>
-        </tr>
-        <tr>
-          <td class="list-group-item list-group-item-dark">Diagram of pm</td>
-          <td>
-            <button disabled type="submit" class="btn btn-danger">
-              Ongoing
-            </button>
-          </td>
-        </tr>
+          <div class="form-group">
+
+              <textarea style="border: #00BCD4 1px solid" class="form-control" rows="5" cols="100" #name="ngModel"name ="task"[(ngModel)]="userModel.task"></textarea>
+              <br>
+              <button type="submit" class="btn btn-info"(click)=oWntask()>
+                Start
+              </button>
+
+
+          </div>
+      <table class="col-md-12"style="   border-collapse: separate;border-spacing: 0 1em;">
+
         <tr *ngFor="let row of tasks">
 
-          <td class="list-group-item list-group-item-primary">{{ row.task }}</td>
-          <td>
-            <button type="submit" class="btn btn-success">
+          <td *ngIf="!(row.task==null)"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
+
+          <td *ngIf="row.task.status"><button type="submit" class="btn btn-danger">
+            Ongoing
+          </button></td>
+
+          <td *ngIf="!row.task.status">
+            <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
               Start
             </button>
           </td>
         </tr>
+
       </table>
     </div>
 
