--- a/src/app/pages/projectreview/projectreview.component.html
+++ b/src/app/pages/projectreview/projectreview.component.html
@@ -16,6 +16,22 @@
 
           </ng-select >
         </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <td>
+                <label> Employee Name </label>
+                <input type="text" readonly class="form-control" [value]="employee">
+                <i class="form-group__bar"></i>
+
+              </td>
+            </div>
+          </div>
+        </div>
+
+
+
           <div *ngIf="Boolean">
 
           <td style="width: 100px">
@@ -71,6 +87,12 @@
 <div class="card">
   <div class="card-body">
     <h4 class="card-title">Project Review Table</h4>
+    <div class="form-group">
+      <label>Select Date Range</label>
+      <input type="text" placeholder="Pick date range" class="form-control" bsDaterangepicker
+             [bsConfig]="bsConfig" [(ngModel)]="bsValueRange"(ngModelChange)="ngDate()">
+      <i class="form-group__bar"></i>
+    </div>
     <table datatable class="table table-bordered" [dtTrigger]="dtTrigger" [dtOptions]="options">
       <thead>
       <tr>
