--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,19 +1,25 @@
-<div class="card">
-  <div class="card-body">
-    <h4 class="card-title">Ongoing Tasks</h4>
-    <table datatable class="table table-bordered" [dtTrigger]="dtTrigger" [dtOptions]="options">
-      <thead>
-      <tr>
-        <th *ngFor="let column of columns">{{ column.title }}</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.employeename.employeename}}
-        </td>
-        <td>{{user.task.task}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title"> Table</h4>
+          <table class="table table-dark"  >
+            <thead>
+            <tr>
+              
+              <th scope="col">Employee</th>
+               <th scope="col">Working On</th>
+            </tr>
+         
+            </thead>
+            <tbody>
+            <tr *ngFor="let user of users">
+              <td>{{ user.employeename.employeename}}
+              </td>
+              <td>{{user.task.task}}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+    
