--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,7 +3,6 @@
     <h2 class="card-title">Assigned Tasks</h2>
 
     <form #userForm="ngForm"  (ngSubmit)="onSubmit()" novalidate>
-
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
@@ -16,7 +15,7 @@
         <div class="form-group">
           <label>Select Employees</label>
           <ng-select [items]="users" bindLabel="employeename"  [clearable]=false
-                     placeholder="Select Employee" #employee="ngModel" name="employee"[(ngModel)]="userModel.employee"(change)="onChangeName($event)">
+                     placeholder="Select Employee" #employee="ngModel" name="employee"[(ngModel)]="userModel.employee">
             <i class="form-group__bar"></i>
           </ng-select>
         </div>
@@ -36,9 +35,9 @@
       <tbody>
       <tr *ngFor="let user of emp">
         <td >{{user.projectname}}</td>
-        
-      
-        <td >{{user.employeeName.employeename}}</td>
+
+
+        <td >{{user.employeeName.employeename|| null}}</td>
       </tr>
       </tbody>
 </table>
