--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -39,6 +39,12 @@
         
       
         <td >{{user.employeeName.employeename}}</td>
+        <td>  <button class="btn btn-primary btn-sm btn--icon-text" (click)="delete(row._id)">
+          <i class="zmdi zmdi-delete"></i> Delete
+        </button></td>
+      <td><button class="btn btn-primary btn-sm btn--icon-text" (click)="put(row._id)">
+          <i class="zmdi zmdi-edit"></i> Edit
+          </button></td>
       </tr>
       </tbody>
 </table>
