project is completed

--- a/src/app/pages/projectreview/projectreview.component.html
+++ b/src/app/pages/projectreview/projectreview.component.html
@@ -101,6 +101,9 @@
       </thead>
       <tbody>
       <tr *ngFor="let user of user">
+        <td>
+          {{user.created_at}}
+        </td>
         <td>{{ user.task}}
         </td>
         <td>{{user.state}}</td>
