--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -11,21 +11,54 @@
       </div>
     </div>
     <div class="row">
-          <div class="form-group">
+        <div class="form-group">
 
               <textarea style="border: #00BCD4 1px solid" class="form-control" rows="5" cols="100" #name="ngModel"name ="task"[(ngModel)]="userModel.task"></textarea>
               <br>
               <button type="submit" class="btn btn-info"(click)=oWntask()>
                 Start
+              </button>&nbsp;&nbsp;
+              
+            <div [hidden]="isDisplay">
+            <tr *ngFor="let row of tasks">
+
+                <td *ngIf="row.task.status===null"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}
+                <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
+                  reopen
+                </button>
+              </td>
+              </tr>
+            </div>
+            
+            <button  type="submit" class="btn btn-warning"(click)=finishtasklist()>
+              Finish_task_List
+            </button>&nbsp;&nbsp;
+               
+
+            <div [hidden]="isdisplay">
+              <tr *ngFor="let row of tasks">
+  
+                  <td *ngIf="row.task.status===false"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}
+                  <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
+                    resume
+                  </button>
+                </td>
+                </tr>
+              </div>
+              
+              <button  type="submit" class="btn btn-danger"(click)= pausetasklist()>
+                pause_task_List
               </button>
-
-
-          </div>
+                 
+         
+       
+      </div>
       <table class="col-md-12"style="   border-collapse: separate;border-spacing: 0 1em;">
 
         <tr *ngFor="let row of tasks">
 
-       <td *ngIf="row.task.status!==null"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
+       <td *ngIf="row.task.status===true"class="list-group-item list-group-item-primary" bindLabel="task">{{ row.task.task }}</td>
+       
 <td *ngIf="row.task.status==true"><button type="submit" class="btn btn-danger" (click)=Finish(row.task._id)>
             Finish
           </button>&nbsp;
@@ -35,12 +68,12 @@
           </button>
         </td>
 
-          <td *ngIf="row.task.status!==null||row.task.status==false">
+          <!-- <td *ngIf="row.task.status==false">
             <button type="submit" class="btn btn-success" (click)=task(row.task._id)>
-              Start
+              resume 
             
             </button>
-          </td>
+          </td>-->
        
         </tr>
 
